<resources>
    <string name="app_name">ShengnongCollege</string>
    <string name="main_toast_quit_warnning">再按一次退出程序</string>
    <string name="toast_keyword_empty">关键字不能为空</string>
    <string name="util_dialog_loading_please_waiting">正在加载，请稍后...</string>


    <string name="music_empty">空空如也</string>
    <string name="music_loading">正在加载本地音乐...</string>

    <string name="delete">删除</string>

    <string name="video_edit">编辑视频</string>

    <string name="video_edit_segment">请拖拽两侧滑块选择剪裁区域</string>

    <string name="video_editer_set_speed">设置慢速片段</string>
    <string name="video_reverse">开启视频倒放</string>
    <string name="video_repeate_segment">设置重复的片段</string>

    <!--刷新框架的-->
    <string name="base_text_empty_message">没有符合条件的信息</string>
    <string name="base_text_pull_up_loading_more">上拉载入更多</string>
    <string name="base_text_pull_down_refresh">下拉刷新</string>
    <string name="base_text_release_to_loading_more">松开载入更多</string>
    <string name="base_text_release_to_refresh">释放刷新</string>
    <string name="base_text_header_last_time">上次更新时间：</string>
    <string name="base_label_refreshing_now">正在刷新</string>
    <string name="base_label_finish">完成</string>
    <string name="base_label_finished">已完成</string>
    <string name="base_text_loading">加载中</string>
    <string name="base_text_loading_more">正在载入</string>
    <!--登录和注册页面-->
    <string name="init_hint_username_text">手机号码</string>
    <string name="init_hint_password_text">密码</string>
    <string name="init_label_regier">注册？</string>
    <string name="init_label_login">登录</string>
    <string name="init_label_login_out">退出登录</string>
    <string name="init_label_pleaslogin">请登录</string>
    <string name="init_label_getcode">获取短信验证码</string>
    <string name="init_hint_register_tel">请输入手机号码</string>
    <string name="init_label_xieyi">我已阅读并同意《神农学院用户注册协议》</string>
    <string name="init_hint_register_sure">确定</string>
    <!--我的页面-->
    <string name="mine_label_title">我的</string>
    <string name="init_label_loginorregister">登录/注册</string>
    <string name="mine_label_wsgrxx">完善个人信息</string>
    <string name="mine_label_xgmm">修改密码</string>
    <string name="mine_label_yjfk">意见反馈</string>
    <string name="mine_label_aboutme">关于我们</string>
    <string name="mine_label_signin">签到</string>
    <!--完善个人信息页面-->
    <string name="wsgrxx_label_title">完善个人信息</string>
    <string name="wsgrxx_label_NickName">昵称</string>
    <string name="wsgrxx_label_UserName">姓名</string>
    <string name="wsgrxx_label_Gender">性别</string>
    <string name="wsgrxx_label_Birthday">出生日期</string>
    <string name="wsgrxx_label_Mobile">电话号码：+86</string>
    <string name="wsgrxx_label_IDCard">身份证号码</string>

    <!--关于我们页面-->
    <string name="aboutme_label_title">关于我们</string>
    <string name="aboutme_label_title1">软件开发商：山西米力信息技术有限公司</string>
    <string name="aboutme_label_title2">地址：山西省高平市电子商务产业园</string>
    <string name="aboutme_label_title3">联系方式：17803565206</string>

    <!--意见反馈页面-->
    <string name="feedback_label_title">意见反馈</string>
    <string name="feedback_label_tips">请输入不少于10个字的描述...</string>
    <string name="feedback_label_sure">提交</string>
    <!--修改密码页面-->
    <string name="updatepass_label_title">修改密码</string>
    <string name="updatepass_label_code">短信验证码</string>
    <string name="updatepass_label_newpass">设置新密码</string>
    <string name="updatepass_label_getcode">获取验证码</string>

    <!--欢迎页面-->
    <string name="init_splash_tips">课堂直播</string>
    <string name="init_splash_tips1">海量老师直播，随时随地学习</string>
    <string name="init_splash_btn">开始体验</string>

</resources>
