<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:background="@color/withe"
    android:fitsSystemWindows="true">
    <ImageView
        android:id="@+id/splash_bg_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"
        android:background="@drawable/splash_bg_top"
        />
    <TextView
        android:id="@+id/splash_bg_tv1"
        android:layout_below="@+id/splash_bg_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:autoLink="all"
        android:text="@string/init_splash_tips"
        android:textColor="@color/colorGray8"
        android:textSize="22sp" />
    <TextView
        android:id="@+id/splash_bg_tv2"
        android:layout_below="@+id/splash_bg_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/init_splash_tips1"
        android:textColor="@color/colorGray8"
        android:textSize="17sp" />
    <Button
        android:id="@+id/open_btn"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/splash_bg_btn"
        android:layout_alignParentBottom="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="invisible"
        android:text="@string/init_splash_btn"
        android:textColor="@color/withe"
        android:textSize="18sp" />
</RelativeLayout>