<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:clipToPadding="true"
    android:background="@color/withe">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/table_bg"
        android:layout_height="48dp">
        <LinearLayout
            android:id="@+id/aboutme_top_back"
            android:layout_width="48dp"
            android:gravity="center"
            android:layout_height="48dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray8"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/feedback_label_title" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_classify_listitembg"
        >
        <EditText
            android:id="@+id/opinion_et"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="8dp"
            android:background="@null"
            android:gravity="top"
            android:textSize="16sp"
            android:textColor="@color/colorGray8"
            android:textColorHint="@color/divide_line"
            android:hint="@string/feedback_label_tips"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/feedback_btn"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/log_btn_pre"
        android:textSize="18sp"
        android:focusable="true"
        android:text="@string/feedback_label_sure"
        android:textColor="@color/withe" />
</LinearLayout>