<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:clipToPadding="true"
    android:background="@color/withe">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/table_bg"
        android:layout_height="48dp">
        <LinearLayout
            android:id="@+id/updatepass_top_back"
            android:layout_width="48dp"
            android:gravity="center"
            android:layout_height="48dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray8"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/updatepass_label_title" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/updatepass_item_Mobile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:paddingLeft="8dp"
            android:gravity="left|center"
            android:textColor="@color/colorGray8"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/top_text_bg">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="32dp"
        android:gravity="center"
        android:layout_marginRight="32dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/wsgrxx_item_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:paddingLeft="8dp"
            android:hint="@string/updatepass_label_code"
            android:gravity="left|center"
            android:inputType="number"
            android:textColorHint="#7E7E7E"
            android:textColor="@color/colorGray8"
            android:singleLine="true"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/updatepass_item_getCode"
            android:layout_width="85dp"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/shape_yellow_conner"
            android:hint="@string/updatepass_label_getcode"
            android:gravity="center"
            android:textColor="@color/colorGray8"
            android:singleLine="true"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/top_text_bg">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/updatepass_item_setpass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:hint="@string/updatepass_label_newpass"
            android:gravity="left|center"
            android:textColorHint="#7E7E7E"
            android:textColor="@color/colorGray8"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/top_text_bg">

    </LinearLayout>
    <Button
        android:id="@+id/updatepass_btn"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/log_btn_pre"
        android:textSize="18sp"
        android:focusable="true"
        android:text="@string/init_hint_register_sure"
        android:textColor="@color/withe" />
</LinearLayout>