<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="right"
        android:layout_marginRight="32dp"
        android:layout_marginTop="80dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="@string/init_label_pleaslogin"
        android:textColor="@color/withe"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/shape_huise_sousuo"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:background="@drawable/login_username_ico" />

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/init_hint_username_text"
                android:imeOptions="actionNext"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="#7E7E7E"
                android:textColorHint="@color/divide_line"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_huise_sousuo"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:background="@drawable/login_password_ico" />


            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/init_hint_password_text"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="#7E7E7E"
                android:textColorHint="@color/divide_line"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="32dp"
            android:layout_marginTop="10dp"
            android:autoLink="all"
            android:clickable="true"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/init_label_regier"
            android:textColor="@color/withe"
            android:textSize="@dimen/sub_content" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_btn_bg"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/init_label_login"
            android:textColor="@color/top_text_bg"
            android:textSize="18sp" />

        <Button
            android:id="@+id/test_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="25dip"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/login_btn_bg"
            android:focusable="true"
            android:gravity="center"
            android:text="进入测试页面"
            android:textColor="@color/top_text_bg"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>