<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:clipToPadding="true"
    android:background="@color/withe">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/table_bg"
        android:layout_height="48dp">
        <LinearLayout
            android:id="@+id/aboutme_top_back"
            android:layout_width="48dp"
            android:gravity="center"
            android:layout_height="48dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray8"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/aboutme_label_title" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:paddingLeft="8dp"
                    android:gravity="left|center"
                    android:textColor="#7E7E7E"
                    android:singleLine="true"
                    android:text="@string/aboutme_label_title1"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/top_text_bg">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:paddingLeft="8dp"
                    android:gravity="left|center"
                    android:textColor="#7E7E7E"
                    android:singleLine="true"
                    android:text="@string/aboutme_label_title2"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/top_text_bg">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:text="@string/aboutme_label_title3"
                    android:paddingLeft="8dp"
                    android:gravity="left|center"
                    android:textColor="#7E7E7E"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/top_text_bg">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>