<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:clipToPadding="true"
    android:background="@color/withe">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/table_bg"
        android:layout_height="48dp">
        <LinearLayout
            android:id="@+id/wsgrxx_top_back"
            android:layout_width="48dp"
            android:gravity="center"
            android:layout_height="48dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray8"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/wsgrxx_label_title" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wsgrxx_top_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:text="上传图片"
                android:clickable="true"
                android:autoLink="all"
                android:textColor="@color/top_text_bg"
                android:padding="10dp"
                android:textSize="@dimen/main_content"
                />
            <RelativeLayout
                android:layout_width="69dp"
                android:layout_gravity="center"
                android:layout_height="69dp">
                <ImageView
                    android:id="@+id/wsgrxx_top_userImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/wsgrxx_item_NickName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:paddingLeft="8dp"
                    android:hint="@string/wsgrxx_label_NickName"
                    android:gravity="left|center"
                    android:textColorHint="#7E7E7E"
                    android:textColor="#7E7E7E"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/top_text_bg">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/wsgrxx_item_UserName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:paddingLeft="8dp"
                    android:hint="@string/wsgrxx_label_UserName"
                    android:gravity="left|center"
                    android:textColorHint="#7E7E7E"
                    android:textColor="#7E7E7E"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/top_text_bg">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="32dp"
                android:gravity="center"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/wsgrxx_item_Gender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:paddingLeft="8dp"
                    android:hint="@string/wsgrxx_label_Gender"
                    android:gravity="left|center"
                    android:textColorHint="#7E7E7E"
                    android:textColor="#7E7E7E"
                    android:singleLine="true"
                    android:textSize="16sp" />
                <RelativeLayout
                    android:id="@+id/wsgrxx_item_Gender_choose"
                    android:layout_width="40dp"
                    android:gravity="center"
                    android:layout_height="40dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/wsgrxx_xingbie"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/top_text_bg">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/wsgrxx_item_Birthday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:paddingLeft="8dp"
                    android:hint="@string/wsgrxx_label_Birthday"
                    android:gravity="left|center"
                    android:textColorHint="#7E7E7E"
                    android:textColor="#7E7E7E"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/top_text_bg">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/wsgrxx_item_Mobile"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:paddingLeft="8dp"
                    android:hint="@string/wsgrxx_label_Mobile"
                    android:gravity="left|center"
                    android:textColorHint="#7E7E7E"
                    android:textColor="#7E7E7E"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/top_text_bg">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/wsgrxx_item_IDCard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:paddingLeft="8dp"
                    android:hint="@string/wsgrxx_label_IDCard"
                    android:gravity="left|center"
                    android:textColorHint="#7E7E7E"
                    android:textColor="#7E7E7E"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/top_text_bg">

            </LinearLayout>

            <Button
                android:id="@+id/wsgrxx_btn"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:background="@drawable/log_btn_pre"
                android:textSize="18sp"
                android:focusable="true"
                android:text="@string/base_label_finish"
                android:textColor="@color/withe" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>